--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.17.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "shortid": "^2.2.17"
   }
 }
